--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab6aef1cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ba3165990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab6b1e4310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab6b4e94d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ba2e19390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ba2e19590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab6ba93690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab6ba54e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ba307bb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ba307bd90&gt;]</pre>
 </div>
 
 </div>
