--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf5c65b150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa941b49610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf5c368e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcf5c382510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa941e31f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa941e25190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf5cbec7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcf5cbf6e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9426a7810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9426a7a10&gt;]</pre>
 </div>
 
 </div>
