--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8d0d2f810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b1e7e8d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8cfb77150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8cfb77350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b1eafb210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b1eafb410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d03f7a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8d03f7c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b1ed35b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b1ed35d90&gt;]</pre>
 </div>
 
 </div>
