--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97a2c88090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f77acc1ec50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97a2fc25d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97a2fc27d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77aceea2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77aceea4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97a321a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97a321a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77ad781bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77ad781dd0&gt;]</pre>
 </div>
 
 </div>
