--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5592485d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e6619c890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5591b31490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5591b31690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e65b25410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e65b25610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f55923cdd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f55923cdf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e663a5cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e663a5ed0&gt;]</pre>
 </div>
 
 </div>
