--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3222e88ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3fc9ecead0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3222eb3250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3222eb3450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3fca1c7210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3fca1c7410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3223735b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3223735d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3fcaa49b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3fcaa49d10&gt;]</pre>
 </div>
 
 </div>
