--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9a7fef110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f551043fd90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9a7ffc110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9a7ffc310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f550f8a3090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f550f8a3290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9a825ca90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9a825cc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f550fb09990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f550fb09b90&gt;]</pre>
 </div>
 
 </div>
