--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6437ed3610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9dbf59d610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64381c4350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f643819be50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dbefab250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dbefab450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6438a7ee10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6438a2da90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dbf81cb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dbf81cd90&gt;]</pre>
 </div>
 
 </div>
