--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f331a3aea90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98dfad8390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f331a47c290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f331a47c490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98dfdacf50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98dfd95210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f331acefb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f331acefd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98e0626850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98e0630ad0&gt;]</pre>
 </div>
 
 </div>
