--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f901f4589d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdcc7823310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f901f44a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f901f44a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdcc7540210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdcc7540410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f901fccda50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f901fccdc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdcc7dc0b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdcc7dc0d10&gt;]</pre>
 </div>
 
 </div>
