--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5261d0a8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe479913ad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5261a022d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5261a024d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe47961c3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe47961c5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f526229ac50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f526229ae50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe479eb5c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe479eb5e50&gt;]</pre>
 </div>
 
 </div>
