--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11cde1e7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19ad49d3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f11cdb2b210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11cdb2b410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19ac2e2250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19ac2e2450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f11ce3b0b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11ce3b0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19acb66b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19acb66d90&gt;]</pre>
 </div>
 
 </div>
