--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19ad49d3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3290f57650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19ac2e2250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19ac2e2450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f328fd99350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f328fd99550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19acb66b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19acb66d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f329061fc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f329061fe50&gt;]</pre>
 </div>
 
 </div>
