--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0a8620310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8f48070b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0a8c92110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0a8c92310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f4833e110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8f4833e310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0a8ecda90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0a8ecdc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f48bd6a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8f48bd6c10&gt;]</pre>
 </div>
 
 </div>
