--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40776d7e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc6d77f8790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4077a29350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4077a29550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc6d77dc250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc6d77dc3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4077c75bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4077c75dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc6d8077b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc6d8077cd0&gt;]</pre>
 </div>
 
 </div>
