--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe44862a690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1c4b996d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe44240b110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe44240b310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1c51e5350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1c51e5590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe442c91a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe442c91c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1c5432bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1c5432e10&gt;]</pre>
 </div>
 
 </div>
