--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4cf439390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9cdfa92d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ce2a4fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4ce297210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9cdcbe250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9cdcbe410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4ceb1c910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4ceb1cb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9ce53fad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9ce53fc90&gt;]</pre>
 </div>
 
 </div>
